--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -1,7 +1,9 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 @import '@skeletonlabs/skeleton';
 @import '@skeletonlabs/skeleton/optional/presets';
-@import '@skeletonlabs/skeleton/themes/catppuccin';
+@import './resto-rate-theme.css';
+@plugin '@tailwindcss/forms';
+@plugin '@tailwindcss/typography';
 
-@source '../../node_modules/@skeletonlabs/skeleton-svelte/dist';
+@source '../../../node_modules/@skeletonlabs/skeleton-svelte/dist';
