--- a/apps/web/src/resto-rate-theme.css
+++ b/apps/web/src/resto-rate-theme.css
@@ -1,28 +1,28 @@
 [data-theme='resto-rate-theme'] {
-	--text-scaling: 1.067;
+	---text-scaling: 1.067;
 	--base-font-color: var(--color-surface-950);
 	--base-font-color-dark: var(--color-surface-50);
-	--base-font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+	--base-font-family: system-ui, sans-serif;
 	--base-font-size: inherit;
 	--base-line-height: inherit;
 	--base-font-weight: normal;
 	--base-font-style: normal;
-	--base-letter-spacing: 0.025em;
+	--base-letter-spacing: 0em;
 	--heading-font-color: inherit;
 	--heading-font-color-dark: inherit;
 	--heading-font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
 	--heading-font-weight: bold;
 	--heading-font-style: normal;
-	--heading-letter-spacing: -0.025em;
-	--anchor-font-color: var(--color-secondary-950);
-	--anchor-font-color-dark: var(--color-secondary-500);
+	--heading-letter-spacing: inherit;
+	--anchor-font-color: var(--color-primary-500);
+	--anchor-font-color-dark: var(--color-primary-500);
 	--anchor-font-family: inherit;
 	--anchor-font-size: inherit;
 	--anchor-line-height: inherit;
 	--anchor-font-weight: inherit;
 	--anchor-font-style: inherit;
 	--anchor-letter-spacing: inherit;
-	--anchor-text-decoration: inherit;
+	--anchor-text-decoration: none;
 	--anchor-text-decoration-hover: underline;
 	--anchor-text-decoration-active: none;
 	--anchor-text-decoration-focus: none;
@@ -32,43 +32,43 @@
 	--default-border-width: 1px;
 	--default-divide-width: 1px;
 	--default-ring-width: 1px;
-	--body-background-color: var(--color-surface-50);
+	--body-background-color: oklch(1 0 0 / 1);
 	--body-background-color-dark: var(--color-surface-950);
-	--color-primary-50: oklch(84.49% 0.06 286.08deg);
-	--color-primary-100: oklch(75.01% 0.12 292.26deg);
-	--color-primary-200: oklch(66.15% 0.19 292.78deg);
-	--color-primary-300: oklch(58.29% 0.24 290.27deg);
-	--color-primary-400: oklch(52.28% 0.28 285.76deg);
-	--color-primary-500: oklch(48.65% 0.3 279.02deg);
-	--color-primary-600: oklch(45.08% 0.27 279.33deg);
-	--color-primary-700: oklch(41.55% 0.25 279.58deg);
-	--color-primary-800: oklch(37.87% 0.23 280.01deg);
-	--color-primary-900: oklch(34.18% 0.21 280.42deg);
-	--color-primary-950: oklch(30.27% 0.18 281.19deg);
+	--color-primary-50: oklch(96.15% 0.04 202.18deg);
+	--color-primary-100: oklch(89.2% 0.06 233.06deg);
+	--color-primary-200: oklch(82.26% 0.09 246.42deg);
+	--color-primary-300: oklch(75.29% 0.12 254.44deg);
+	--color-primary-400: oklch(68.61% 0.15 257.7deg);
+	--color-primary-500: oklch(62.34% 0.19 259.75deg);
+	--color-primary-600: oklch(56.06% 0.18 260.72deg);
+	--color-primary-700: oklch(49.67% 0.18 261.87deg);
+	--color-primary-800: oklch(43.02% 0.17 263.09deg);
+	--color-primary-900: oklch(36.43% 0.17 263.94deg);
+	--color-primary-950: oklch(29.74% 0.16 263.56deg);
 	--color-primary-contrast-dark: var(--color-primary-950);
-	--color-primary-contrast-light: oklch(100% 0 none);
+	--color-primary-contrast-light: var(--color-primary-50);
 	--color-primary-contrast-50: var(--color-primary-contrast-dark);
 	--color-primary-contrast-100: var(--color-primary-contrast-dark);
 	--color-primary-contrast-200: var(--color-primary-contrast-dark);
-	--color-primary-contrast-300: var(--color-primary-contrast-light);
-	--color-primary-contrast-400: var(--color-primary-contrast-light);
-	--color-primary-contrast-500: var(--color-primary-contrast-light);
+	--color-primary-contrast-300: var(--color-primary-contrast-dark);
+	--color-primary-contrast-400: var(--color-primary-contrast-dark);
+	--color-primary-contrast-500: var(--color-primary-contrast-dark);
 	--color-primary-contrast-600: var(--color-primary-contrast-light);
 	--color-primary-contrast-700: var(--color-primary-contrast-light);
 	--color-primary-contrast-800: var(--color-primary-contrast-light);
 	--color-primary-contrast-900: var(--color-primary-contrast-light);
 	--color-primary-contrast-950: var(--color-primary-contrast-light);
-	--color-secondary-50: oklch(97.1% 0.04 167.7deg);
-	--color-secondary-100: oklch(94.99% 0.07 172.1deg);
-	--color-secondary-200: oklch(93.21% 0.1 173.64deg);
-	--color-secondary-300: oklch(91.52% 0.12 173.53deg);
-	--color-secondary-400: oklch(90.35% 0.14 172.97deg);
-	--color-secondary-500: oklch(89.46% 0.16 171.47deg);
-	--color-secondary-600: oklch(82.58% 0.15 170.58deg);
-	--color-secondary-700: oklch(75.3% 0.14 169.36deg);
-	--color-secondary-800: oklch(68.11% 0.13 168.04deg);
-	--color-secondary-900: oklch(60.47% 0.12 166.2deg);
-	--color-secondary-950: oklch(52.9% 0.11 164.04deg);
+	--color-secondary-50: oklch(95.67% 0.06 196.16deg);
+	--color-secondary-100: oklch(89.58% 0.08 209.51deg);
+	--color-secondary-200: oklch(83.74% 0.1 218.08deg);
+	--color-secondary-300: oklch(78.38% 0.12 223.87deg);
+	--color-secondary-400: oklch(73.2% 0.14 230.33deg);
+	--color-secondary-500: oklch(68.44% 0.15 237.3deg);
+	--color-secondary-600: oklch(61.93% 0.14 239.61deg);
+	--color-secondary-700: oklch(55.31% 0.13 242.75deg);
+	--color-secondary-800: oklch(48.43% 0.12 245.93deg);
+	--color-secondary-900: oklch(41.41% 0.12 250.11deg);
+	--color-secondary-950: oklch(34.06% 0.11 254.48deg);
 	--color-secondary-contrast-dark: var(--color-secondary-950);
 	--color-secondary-contrast-light: var(--color-secondary-50);
 	--color-secondary-contrast-50: var(--color-secondary-contrast-dark);
@@ -78,21 +78,21 @@
 	--color-secondary-contrast-400: var(--color-secondary-contrast-dark);
 	--color-secondary-contrast-500: var(--color-secondary-contrast-dark);
 	--color-secondary-contrast-600: var(--color-secondary-contrast-dark);
-	--color-secondary-contrast-700: var(--color-secondary-contrast-dark);
+	--color-secondary-contrast-700: var(--color-secondary-contrast-light);
 	--color-secondary-contrast-800: var(--color-secondary-contrast-light);
 	--color-secondary-contrast-900: var(--color-secondary-contrast-light);
 	--color-secondary-contrast-950: var(--color-secondary-contrast-light);
-	--color-tertiary-50: oklch(97.53% 0.07 121.57deg);
-	--color-tertiary-100: oklch(96.02% 0.11 118.49deg);
-	--color-tertiary-200: oklch(94.55% 0.15 117.01deg);
-	--color-tertiary-300: oklch(93.36% 0.18 117.09deg);
-	--color-tertiary-400: oklch(92.18% 0.2 116.96deg);
-	--color-tertiary-500: oklch(91.26% 0.21 117.62deg);
-	--color-tertiary-600: oklch(84.05% 0.2 118.96deg);
-	--color-tertiary-700: oklch(76.45% 0.18 120.28deg);
-	--color-tertiary-800: oklch(68.83% 0.17 122.52deg);
-	--color-tertiary-900: oklch(60.85% 0.15 124.58deg);
-	--color-tertiary-950: oklch(52.88% 0.14 127.42deg);
+	--color-tertiary-50: oklch(92.34% 0.05 307.3deg);
+	--color-tertiary-100: oklch(86.96% 0.07 296.34deg);
+	--color-tertiary-200: oklch(81.83% 0.1 290.76deg);
+	--color-tertiary-300: oklch(76.5% 0.12 286.71deg);
+	--color-tertiary-400: oklch(71.46% 0.15 283.64deg);
+	--color-tertiary-500: oklch(66.33% 0.18 280.7deg);
+	--color-tertiary-600: oklch(58.49% 0.18 282.18deg);
+	--color-tertiary-700: oklch(50.55% 0.18 283.33deg);
+	--color-tertiary-800: oklch(42.83% 0.18 283.52deg);
+	--color-tertiary-900: oklch(35.06% 0.18 282.84deg);
+	--color-tertiary-950: oklch(27.84% 0.17 279.98deg);
 	--color-tertiary-contrast-dark: var(--color-tertiary-950);
 	--color-tertiary-contrast-light: var(--color-tertiary-50);
 	--color-tertiary-contrast-50: var(--color-tertiary-contrast-dark);
@@ -102,21 +102,21 @@
 	--color-tertiary-contrast-400: var(--color-tertiary-contrast-dark);
 	--color-tertiary-contrast-500: var(--color-tertiary-contrast-dark);
 	--color-tertiary-contrast-600: var(--color-tertiary-contrast-dark);
-	--color-tertiary-contrast-700: var(--color-tertiary-contrast-dark);
+	--color-tertiary-contrast-700: var(--color-tertiary-contrast-light);
 	--color-tertiary-contrast-800: var(--color-tertiary-contrast-light);
 	--color-tertiary-contrast-900: var(--color-tertiary-contrast-light);
 	--color-tertiary-contrast-950: var(--color-tertiary-contrast-light);
-	--color-success-50: oklch(97.74% 0.05 129.02deg);
-	--color-success-100: oklch(95.69% 0.08 135.46deg);
-	--color-success-200: oklch(93.75% 0.11 137.91deg);
-	--color-success-300: oklch(91.76% 0.14 139.36deg);
-	--color-success-400: oklch(90.13% 0.17 140.1deg);
-	--color-success-500: oklch(88.68% 0.2 140.7deg);
-	--color-success-600: oklch(81.26% 0.2 141.26deg);
-	--color-success-700: oklch(73.74% 0.2 141.64deg);
-	--color-success-800: oklch(66.16% 0.19 142.07deg);
-	--color-success-900: oklch(58.52% 0.18 142.3deg);
-	--color-success-950: oklch(50.89% 0.17 142.46deg);
+	--color-success-50: oklch(97.9% 0.12 108.42deg);
+	--color-success-100: oklch(93.62% 0.14 114.92deg);
+	--color-success-200: oklch(89.33% 0.16 120.32deg);
+	--color-success-300: oklch(84.97% 0.17 124.16deg);
+	--color-success-400: oklch(80.84% 0.19 127.88deg);
+	--color-success-500: oklch(76.91% 0.2 130.94deg);
+	--color-success-600: oklch(69.52% 0.19 133.14deg);
+	--color-success-700: oklch(62% 0.18 135.57deg);
+	--color-success-800: oklch(54.62% 0.16 138.22deg);
+	--color-success-900: oklch(46.86% 0.15 140.72deg);
+	--color-success-950: oklch(39.02% 0.13 142.56deg);
 	--color-success-contrast-dark: var(--color-success-950);
 	--color-success-contrast-light: var(--color-success-50);
 	--color-success-contrast-50: var(--color-success-contrast-dark);
@@ -126,21 +126,21 @@
 	--color-success-contrast-400: var(--color-success-contrast-dark);
 	--color-success-contrast-500: var(--color-success-contrast-dark);
 	--color-success-contrast-600: var(--color-success-contrast-dark);
-	--color-success-contrast-700: var(--color-success-contrast-dark);
+	--color-success-contrast-700: var(--color-success-contrast-light);
 	--color-success-contrast-800: var(--color-success-contrast-light);
 	--color-success-contrast-900: var(--color-success-contrast-light);
 	--color-success-contrast-950: var(--color-success-contrast-light);
-	--color-warning-50: oklch(95.23% 0.02 342.64deg);
-	--color-warning-100: oklch(93.71% 0.03 343.02deg);
-	--color-warning-200: oklch(92.15% 0.04 341.06deg);
-	--color-warning-300: oklch(90.85% 0.06 342.32deg);
-	--color-warning-400: oklch(89.34% 0.07 341.3deg);
-	--color-warning-500: oklch(87.91% 0.08 342.04deg);
-	--color-warning-600: oklch(79.89% 0.08 341.46deg);
-	--color-warning-700: oklch(71.63% 0.08 341.75deg);
-	--color-warning-800: oklch(63.47% 0.07 342.1deg);
-	--color-warning-900: oklch(54.71% 0.07 342.57deg);
-	--color-warning-950: oklch(45.66% 0.07 342.07deg);
+	--color-warning-50: oklch(97.9% 0.12 108.42deg);
+	--color-warning-100: oklch(94.14% 0.13 103.57deg);
+	--color-warning-200: oklch(90.44% 0.14 99.32deg);
+	--color-warning-300: oklch(86.53% 0.15 95.08deg);
+	--color-warning-400: oklch(82.99% 0.16 90.77deg);
+	--color-warning-500: oklch(79.54% 0.16 85.76deg);
+	--color-warning-600: oklch(70.7% 0.14 84.83deg);
+	--color-warning-700: oklch(61.78% 0.12 84.29deg);
+	--color-warning-800: oklch(52.19% 0.1 83.2deg);
+	--color-warning-900: oklch(42.49% 0.08 81.63deg);
+	--color-warning-950: oklch(31.97% 0.06 76.37deg);
 	--color-warning-contrast-dark: var(--color-warning-950);
 	--color-warning-contrast-light: var(--color-warning-50);
 	--color-warning-contrast-50: var(--color-warning-contrast-dark);
@@ -150,21 +150,21 @@
 	--color-warning-contrast-400: var(--color-warning-contrast-dark);
 	--color-warning-contrast-500: var(--color-warning-contrast-dark);
 	--color-warning-contrast-600: var(--color-warning-contrast-dark);
-	--color-warning-contrast-700: var(--color-warning-contrast-dark);
+	--color-warning-contrast-700: var(--color-warning-contrast-light);
 	--color-warning-contrast-800: var(--color-warning-contrast-light);
 	--color-warning-contrast-900: var(--color-warning-contrast-light);
 	--color-warning-contrast-950: var(--color-warning-contrast-light);
-	--color-error-50: oklch(91.07% 0.05 44.91deg);
-	--color-error-100: oklch(84.27% 0.09 40.23deg);
-	--color-error-200: oklch(77.99% 0.13 38.51deg);
-	--color-error-300: oklch(72.5% 0.17 37.21deg);
-	--color-error-400: oklch(68.07% 0.21 35.91deg);
-	--color-error-500: oklch(64.98% 0.24 33.29deg);
-	--color-error-600: oklch(61.27% 0.22 33.11deg);
-	--color-error-700: oklch(57.34% 0.2 32.75deg);
-	--color-error-800: oklch(53.48% 0.19 31.5deg);
-	--color-error-900: oklch(49.49% 0.17 29.34deg);
-	--color-error-950: oklch(45.67% 0.15 25.35deg);
+	--color-error-50: oklch(91.14% 0.07 332.14deg);
+	--color-error-100: oklch(83.11% 0.1 340.09deg);
+	--color-error-200: oklch(75.23% 0.14 345.04deg);
+	--color-error-300: oklch(68.26% 0.18 349.09deg);
+	--color-error-400: oklch(61.95% 0.21 353.27deg);
+	--color-error-500: oklch(57.13% 0.22 358.5deg);
+	--color-error-600: oklch(51.75% 0.2 358.81deg);
+	--color-error-700: oklch(46.07% 0.18 358.43deg);
+	--color-error-800: oklch(40.42% 0.16 358.92deg);
+	--color-error-900: oklch(34.34% 0.13 358.38deg);
+	--color-error-950: oklch(28.04% 0.11 358.71deg);
 	--color-error-contrast-dark: var(--color-error-950);
 	--color-error-contrast-light: var(--color-error-50);
 	--color-error-contrast-50: var(--color-error-contrast-dark);
@@ -178,17 +178,17 @@
 	--color-error-contrast-800: var(--color-error-contrast-light);
 	--color-error-contrast-900: var(--color-error-contrast-light);
 	--color-error-contrast-950: var(--color-error-contrast-light);
-	--color-surface-50: oklch(99.11% 0 none);
-	--color-surface-100: oklch(90.97% 0 none);
-	--color-surface-200: oklch(82.97% 0 none);
-	--color-surface-300: oklch(74.44% 0 none);
-	--color-surface-400: oklch(66% 0 none);
-	--color-surface-500: oklch(56.93% 0 none);
-	--color-surface-600: oklch(49.97% 0 none);
-	--color-surface-700: oklch(42.76% 0 none);
-	--color-surface-800: oklch(35.23% 0 none);
-	--color-surface-900: oklch(27.27% 0 none);
-	--color-surface-950: oklch(18.67% 0 none);
+	--color-surface-50: oklch(97.61% 0 none);
+	--color-surface-100: oklch(88.17% 0.01 264.56deg);
+	--color-surface-200: oklch(78.47% 0.02 264.48deg);
+	--color-surface-300: oklch(68.53% 0.03 265.52deg);
+	--color-surface-400: oklch(58.21% 0.04 265.04deg);
+	--color-surface-500: oklch(47.47% 0.05 264.53deg);
+	--color-surface-600: oklch(42.05% 0.05 264.5deg);
+	--color-surface-700: oklch(36.45% 0.05 264.44deg);
+	--color-surface-800: oklch(30.96% 0.04 263.65deg);
+	--color-surface-900: oklch(24.88% 0.04 263.42deg);
+	--color-surface-950: oklch(18.45% 0.04 262.95deg);
 	--color-surface-contrast-dark: var(--color-surface-950);
 	--color-surface-contrast-light: var(--color-surface-50);
 	--color-surface-contrast-50: var(--color-surface-contrast-dark);
